Closed Bug 216030 Opened 22 years ago Closed 22 years ago

InvalidateScrollbar() should be internal to nsTreeBodyFrame

Categories

(Core :: XUL, defect)

x86
Windows 95
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Assigned: janv)

Details

Attachments

(1 file)

The scrollbar only needs to be invalidated when: * The tree body size changes * The tree view changes * The tree view row count changes * The tree batch update ends So it should be internal to nsTreeBodyFrame.
Attached patch Proposed patchSplinter Review
Comment on attachment 129731 [details] [diff] [review] Proposed patch this does make sense
Attachment #129731 - Flags: review+
Attachment #129731 - Flags: superreview?(rbs)
Comment on attachment 129731 [details] [diff] [review] Proposed patch not a big deal either way. sr=rbs
Attachment #129731 - Flags: superreview?(rbs) → superreview+
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: