Bug 216030 InvalidateScrollbar() should be internal to nsTreeBodyFrame r=varga sr=rbs